--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 	<main>
 		<div class="about">
 			<div class="container">
+				<img src="/src/img/Map.png" alt="map" class="map">
 				<div class="about__content">
 					<div class="about__block about__block_left">
 						We are an innovative global real estate investment management company unlike any other.
@@ -69,13 +70,27 @@
 							</p>
 
 						</div>
-						<div class="block__infographic">
-
+						<div class="block__infographic info">
+							<div class="info__digit">17</div>
+							<div class="info__alpha">years in business</div>
+						</div>
+						<div class="block__infographic info">
+							<div class="info__digit">124</div>
+							<div class="info__alpha">projects</div>
+						</div>
+						<div class="block__infographic info">
+							<div class="info__digit">$160</div>
+							<div class="info__alpha">total equity</div>
 						</div>
 					</div>
 
 				</div>
 			</div>
+		</div>
+
+		<div class="services">
+
+			
 		</div>
 
 
