--- a/index.html
+++ b/index.html
@@ -88,9 +88,29 @@
 			</div>
 		</div>
 
-		<div class="services">
+		<div class="work-with-us">
+			<div class="container">
+				<div class="work-with-us__left">
+					Carrer de la Ciutat de<br>
+					Granada, 120, 08018<br>
+					Barcelona
+				</div>
+				<div class="work-with-us__content blockWork">
+					<div class="blockWork__title">
+						work with us
+					</div>
+					<div class="blockWork__form">
+						<input type="text" name="name" placeholder="Name">
+						<input type="email" name="email" id="" placeholder="Email">
+						<input type="text" name="company" placeholder="Company name">
+						<input type="submit" value="SUBMIT">
+						<input type="reset" value="RESET">
+					</div>
 
-			
+				</div>
+			</div>
+
+
 		</div>
 
 
