--- a/index.html
+++ b/index.html
@@ -95,16 +95,19 @@
 					Granada, 120, 08018<br>
 					Barcelona
 				</div>
-				<div class="work-with-us__content blockWork">
-					<div class="blockWork__title">
+				<div class="work-with-us__content block">
+					<div class="block__title">
 						work with us
 					</div>
 					<div class="blockWork__form">
-						<input type="text" name="name" placeholder="Name">
-						<input type="email" name="email" id="" placeholder="Email">
-						<input type="text" name="company" placeholder="Company name">
-						<input type="submit" value="SUBMIT">
-						<input type="reset" value="RESET">
+						<form action="">
+							<p><input type="text" name="name" placeholder="Name" class="field"></p>
+							<p><input type="email" name="email" id="" placeholder="Email" class="field"></p>
+							<p><input type="text" name="company" placeholder="Company name" class="field"></p>
+							<input type="submit" value="SUBMIT" class="btn btn_submit">
+							<input type="reset" value="RESET" class="btn">
+						</form>
+
 					</div>
 
 				</div>
